--- a/people-service/pom.xml
+++ b/people-service/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.blf</groupId>
 	<artifactId>people</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>people</name>
+	<name>people-service</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
