--- a/game-service/src/main/resources/application.properties
+++ b/game-service/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=Fingevorobot54321
 spring.application.name=game-service
 server.port=8091
-#eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
