--- a/people-service/src/main/resources/application.properties
+++ b/people-service/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=Fingevorobot54321
 spring.application.name=people-service
 server.port=8081
-#eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
