--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,3 +5,5 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka
 zuul.ignored-services=*
 zuul.routes.people-service.service-id=people-service
 zuul.routes.people-service.path=/people/**
+zuul.routes.game-service.service-id=game-service
+zuul.routes.game-service.path=/game/**
