added ModelWrapper to People-service

--- a/people-service/pom.xml
+++ b/people-service/pom.xml
@@ -69,6 +69,12 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>RELEASE</version>
+		</dependency>
     </dependencies>
 
 	<build>
