--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=apigateway
+spring.application.name=api-gateway
 server.port=8762
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
@@ -6,5 +6,8 @@ zuul.ignored-services=*
 zuul.routes.people-service.service-id=people-service
 zuul.routes.people-service.path=/people/**
 
+
 zuul.routes.game-service.service-id=game-service
 zuul.routes.game-service.path=/game/**
+
+hystrix.command.default.execution.timeout.enabled=false
