--- a/game-service/src/main/resources/application.properties
+++ b/game-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/blf?serverTimezone=UTC
 
-spring.datasource.username=root
-spring.datasource.password=Fingevorobot54321
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.application.name=game-service
 server.port=8091
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
