--- a/people-service/src/main/resources/application.properties
+++ b/people-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/blf?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Fingevorobot54321
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.application.name=people-service
 server.port=8081
