--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,11 +2,13 @@ spring.application.name=api-gateway
 server.port=8762
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=true
+
 zuul.ignored-services=*
-zuul.routes.people-service.service-id=people-service
-zuul.routes.people-service.path=/people/**
-
-
 zuul.routes.game-service.service-id=game-service
 zuul.routes.game-service.path=/game/**
 
+zuul.host.socket-timeout-millis=100000000
+zuul.host.connection-request-timeout-millis=100000000
+zuul.host.connect-timeout-millis=100000000
